--- a/style.css
+++ b/style.css
@@ -40,18 +40,14 @@
 }
 
 .container {
-    height: 100vh;
-    width: 100vw;
     display: none;
 }
 
 .upper {
-    width: calc(100vw - 50px);
-    height: 70vh;
+    width: 100%;
     background-color: #360369;
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
 }
 
 .upper h1 {
@@ -59,6 +55,8 @@
     font-family: Montserrat;
     font-size: 54px;
     font-weight: 700;
+    margin-top: 10px;
+    margin-left: 50px;
 }
 
 .location {
@@ -66,19 +64,22 @@
     font-family: Montserrat;
     font-size: 36px;
     font-weight: 300;
+    margin-top: 10px;
+    margin-left: 50px;
 }
 
-.upper div {
+.upper .lat {
     width: 80%;
-    height: 10%;
     display: flex;
     column-gap: 10px;
     align-items: center;
+    margin-top: 10px;
+    margin-left: 50px;
 }
 
 .upper .lat p {
-    width: 20vw;
-    height: 5vh;
+    width: 300px;
+    height: 50px;
     border-radius: 5px;
     background-color: #270846;
     color: #FFF;
@@ -91,17 +92,18 @@
 }
 
 .upper .map {
-    width: 90%;
-    height: 60%;
+    width: 92%;
+    height: 400px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+    margin-left: 50px;
 }
 
 .lower {
-    width: calc(100vw - 50px);
-    height: 30vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
-    overflow-y: auto;
+    padding-bottom: 50px;
 }
 
 .lower h1 {
@@ -111,33 +113,32 @@
     font-family: Montserrat;
     font-size: 45px;
     font-weight: 700;
+    margin-left: 50px;
 }
 
 .details {
     width: 90%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     align-items: center;
     gap: 20px;
+    margin-left: 50px;
 }
 
 .details div {
-    width: 300px;
-    height: 50px;
+    width: 350px;
+    height: 60px;
     color: #FFF;
     text-align: center;
     font-family: Montserrat;
     font-size: 20px;
     font-weight: 700;
     border-radius: 10px;
-    border: 2px solid #360369;
     background-color: #360369;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 
 @media screen and (max-width: 480px) {
     .btn {
@@ -157,20 +158,16 @@
         height: 5vh;
         font-size: 10px;
     }
+
+    .upper .map {
+        margin-left: 20px;
+    }
+
+    .details{
+        margin-left: 20px;
+    }
+
 }
-
-@media screen and (max-width:768px) and (min-width: 481px) {
-    .upper h1 {
-        font-size: 20px;
-    }
-
-    .location {
-        font-size: 15px;
-    }
-
-    .upper .lat p {
-        width: 40vw;
-        height: 5vh;
-        font-size: 10px;
-    }
+body::-webkit-scrollbar{
+    display: none;    
 }
